# ece2300-sec07-verilog-mem

./: .gitignore  Makefile.in  README.md  configure  configure.ac
ece2300/: SevenSegFL.v  ece2300-misc.v  ece2300-test-mem.v  ece2300-test.v  ece2300.mk
mem/: Decoder_2b_RTL.v  Mux4_4b_RTL.v  RegfileFlat1r1w_4x4b_RTL.v  RegfileStruct1r1w_4x4b_RTL.v  Register_4b_RTL.v  mem.mk
mem/test/: Decoder_2b_RTL-test.v  Decoder_RTL-test.v  Mux4_4b_RTL-test.v  Mux4_RTL-test.v  Regfile1r1w_4x4b-test-cases.v  RegfileFlat1r1w_4x4b_RTL-test.v  RegfileStruct1r1w_4x4b_RTL-test.v  Register_4b_RTL-test.v  Register_RTL-test.v  ece2300-test.v
scripts/: ece2300-lint
scripts/lint/: README.md  lint_rules.py  linter.py  preprocessor.py  rulesets.yaml
scripts/lint/tests/: test_linter.py  testrules.yaml
scripts/lint/tests/test_files/includes/: FullAdder_GL.v  ece2300-xprop.v
scripts/lint/tests/test_files/invalid/: ALWAYSFF_test_fail.v  ALWAYSSTAR_test_fail.v  ASSIGNORDER_test_case_fail.v  ASSIGNORDER_test_if_fail.v  ASYNCRESET_test_fail.v  BLKSEQ_test_fail.v  CASEDEFAULT_test_fail.v  CASEINCOMPLETE_test_fail.v  COMPLEXLHS_test_fail.v  COMPLEXRHS_add_test_fail.v  COMPLEXRHS_test_fail.v  LATCH_test_fail.v  NEGEDGE_test_fail.v  NOMODULE_test_fail.v  NONBLKCOMBI_test_fail.v  NOSPBLK.v  PRIMONLY_test_pass.v  XASSIGN_test_case_fail.v  XPROP_seq_test_fail.v  XPROP_test_fail.v
scripts/lint/tests/test_files/valid/: ALWAYSFF_test_pass.v  ALWAYSSTAR_test_pass.v  ASSIGNORDER_test_case_pass.v  ASSIGNORDER_test_if_pass.v  ASYNCRESET_test_pass.v  BLKSEQ_test_pass.v  CASEDEFAULT_test_pass.v  CASEINCOMPLETE_test_pass.v  COMPLEXLHS_test_pass.v  COMPLEXRHS_port_test_pass.v  COMPLEXRHS_test_pass.v  LATCH_test_pass.v  NEGEDGE_test_pass.v  NOMODULE_test_pass.v  NONBLKCOMBI_test_pass.v  NOSPBLK.v  PRIMONLY_test_pass.v  XASSIGN_test_case_pass.v  XPROP_seq_test_pass.v  XPROP_test_pass.v
